...

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
...
    <string name="feed_auto_download_global">Global default</string>
    <string name="feed_auto_download_always">Always</string>
    <string name="never">Never</string>
    <string name="send_label">Send&#8230;</string>
    <string name="episode_cleanup_except_favorite_removal">When not favorited</string>
    <string name="episode_cleanup_queue_removal">When not in queue</string>
    <string name="episode_cleanup_after_listening">After finishing</string>
    <plurals name="episode_cleanup_hours_after_listening">
        <item quantity="one">1 hour after finishing</item>
...

    <!-- Preferences -->
    <string name="storage_pref">Storage</string>
    <string name="storage_sum">Episode auto delete, Import, Export</string>
    <string name="project_pref">Project</string>
...
    <string name="preference_search_clear_history">Clear history</string>
    <string name="media_player">Media player</string>
    <string name="pref_episode_cleanup_title">Duration</string>
    <string name="pref_episode_cleanup_summary">How long to wait before played episode becomes illegible for automatic deletion</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or bluetooth are disconnected</string>
...
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_auto_delete_sum">Delete episode when playback completes</string>
    <string name="pref_auto_delete_title">Auto Delete</string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
    <string name="pref_smart_mark_as_played_title">Smart Mark as Played</string>
...
    <string name="pref_skip_keeps_episodes_title">Keep Skipped Episodes</string>
    <string name="pref_favorite_keeps_episodes_sum">Keep episodes when they are marked Favorite</string>
    <string name="pref_favorite_keeps_episodes_title">Keep Favorite Episodes</string>
    <string name="playback_pref">Playback</string>
    <string name="playback_pref_sum">Headphone controls, Skip intervals, Queue</string>
    <string name="network_pref">Network</string>
    <string name="network_pref_sum">Update interval, Download controls, Mobile data</string>
    <string name="feed_refresh_title">Refresh podcasts</string>
    <string name="feed_refresh_sum">Specify an interval or a specific time to look for new episodes automatically</string>
    <string name="feed_refresh_interval">Interval</string>
...
        <item quantity="other">Every %d hours</item>
    </plurals>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones or Bluetooth disconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones Reconnect</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth Reconnect</string>
    <string name="pref_stream_over_download_title">Prefer Streaming</string>
    <string name="pref_stream_over_download_sum">Display stream button instead of download button in lists.</string>
...
    <string name="pref_mobileUpdate_episode_download">Episode download</string>
    <string name="pref_mobileUpdate_streaming">Streaming</string>
    <string name="user_interface_label">User Interface</string>
    <string name="user_interface_sum">Appearance, Subscriptions, Lockscreen</string>
    <string name="pref_set_theme_title">Select Theme</string>
    <string name="pref_nav_drawer_items_title">Set Navigation Drawer items</string>
    <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer.</string>
...
    <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if \'Subscription Order\' is set to \'Counter\'.</string>
    <string name="pref_set_theme_sum">Change the appearance of ApexPod.</string>
<!--    <string name="pref_download_title">Automatic Download</string>-->
    <string name="pref_download_title">Download</string>
    <string name="pref_download_sum">Configure the download of episodes.</string>
    <string name="pref_autodl_wifi_filter_title">Enable Wi-Fi filter</string>
    <string name="pref_autodl_wifi_filter_sum">Allow automatic download only for selected Wi-Fi networks.</string>
    <string name="pref_automatic_download_on_battery_title">Download when not charging</string>
    <string name="pref_automatic_download_on_battery_sum">Allow automatic download when the battery is not charging</string>
    <string name="pref_parallel_downloads_title">Parallel Downloads</string>
    <string name="pref_episode_cache_summary">Total number of downloaded episodes cached on the device. Automatic download will be suspended if this number is reached.</string>
    <string name="pref_episode_cover_title">Use Episode Cover</string>
...
    <string name="pref_show_remain_time_summary">Display remaining time of episodes when checked. If unchecked, display total duration of episodes.</string>
    <string name="pref_theme_title_use_system">Use system theme</string>
    <string name="pref_theme_title_light">Light</string>
    <string name="pref_theme_title_dark">Dark</string>
    <string name="pref_theme_title_trueblack">Black (AMOLED ready)</string>
    <string name="synchronization_logout">Logout</string>
...
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
    <string name="pref_playback_time_respects_speed_sum">Displayed position and duration are adapted to playback speed</string>
    <string name="pref_fast_forward">Fast Forward Skip Time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast forward button is clicked</string>
    <string name="pref_rewind">Rewind Skip Time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_expandNotify_title">High Notification priority</string>
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_persistNotify_title">Persistent Playback Controls</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused.</string>
    <string name="pref_compact_notification_buttons_title">Set Compact Notification Buttons</string>
    <string name="pref_compact_notification_buttons_sum">Change the playback buttons when the notification is collapsed. The play/pause button is always included.</string>
    <string name="pref_compact_notification_buttons_dialog_title">Select a maximum of %1$d items</string>
    <string name="pref_compact_notification_buttons_dialog_error">You can only select a maximum of %1$d items.</string>
    <string name="pref_lockscreen_background_title">Set Lockscreen Background</string>
    <string name="pref_lockscreen_background_sum">Set the lockscreen background to the current episode\'s image. As a side effect, this will also show the image in third party apps.</string>
    <string name="pref_enqueue_location_title">Enqueue Location</string>
    <string name="pref_enqueue_location_sum">Add episodes to: %1$s</string>
    <string name="enqueue_location_back">Back</string>
    <string name="enqueue_location_front">Front</string>
    <string name="enqueue_location_after_current">After current episode</string>
    <string name="pref_smart_mark_as_played_disabled">Disabled</string>
    <string name="documentation_support">Documentation &amp; Support</string>
...
    <string name="continue_playback">Continue audio playback</string>
    <string name="behavior">Behavior</string>
    <string name="pref_back_button_behavior_title">Back Button Behavior</string>
