...
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioButton
        android:id="@+id/intervalRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_refresh_interval"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RadioButton
        android:id="@+id/timeRadioButton"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:visibility="gone" />

    <RadioButton
        android:id="@+id/disableRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/never" />
</RadioGroup>

