...
            search:summary="@string/pref_automatic_download_sum"
            android:defaultValue="false"/>
<!--    <ListPreference-->
<!--            android:defaultValue="25"-->
<!--            android:entries="@array/episode_cache_size_entries"-->
<!--            android:key="prefEpisodeCacheSize"-->
<!--            android:title="@string/pref_episode_cache_title"-->
<!--            android:summary="@string/pref_episode_cache_summary"-->
<!--            android:entryValues="@array/episode_cache_size_values"/>-->
    <SwitchPreferenceCompat
            android:key="prefEnableAutoDownloadOnBattery"
            android:title="@string/pref_automatic_download_on_battery_title"
            android:summary="@string/pref_automatic_download_on_battery_sum"
...
