...
                android:title="@string/pref_enqueue_location_title"/>
<!--        <SwitchPreferenceCompat-->
<!--                android:defaultValue="true"-->
<!--                android:enabled="true"-->
<!--                android:key="prefFollowQueue"-->
<!--                android:summary="@string/pref_followQueue_sum"-->
<!--                android:title="@string/pref_followQueue_title"/>-->
        <ListPreference
                android:defaultValue="30"
                android:entries="@array/smart_mark_as_played_values"
                android:entryValues="@array/smart_mark_as_played_values"
                android:key="prefSmartMarkAsPlayedSecs"
                android:summary="@string/pref_smart_mark_as_played_sum"
...
